[package]
name = "ing_to_pocketsmith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = "1.0.144"
serde_derive = "1.0.144"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.11", features = ["blocking"]}
phf = { version = "0.11.1", features = ["macros"] }
chrono = "0.4.23"
dotenv = "0.15.0"
toml = "0.7.3"


[dev-dependencies]
