[package]
name = "pocketsmith-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = "1.0.144"
serde_derive = "1.0.144"
thiserror = "1"
anyhow = "1"
regex = "1.9.5"
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.11", features = ["blocking", "json"]}
chrono = { version = "0.4.23", features = ["serde"]}
toml = "0.7.3"
url = "2.4.1"


[dev-dependencies]
